fix:更换pro-layout为自己定义组件

--- a/src/global.less
+++ b/src/global.less
@@ -76,6 +76,13 @@ ol {
   }
 }
 
+// 菜单图片图标
+.ant-menu-item .ant-menu-item__img, 
+.ant-menu-submenu-title .ant-menu-item__img {
+  width: 14px;
+  height: 14px;
+}
+
 @media (max-width: @screen-xs) {
   .ant-table {
     width: 100%;
